Fix alignnment of search placeholder and focus text color

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -50,7 +50,7 @@ html { overflow-y: auto; }
 	top: 0;
 	left: 0;
 }
-.global-nav h4 { top: 10px; left: 150px; font-size: 10px; line-height: 1.2; margin: 0; padding-right: 38px; color: #ddd; }
+.global-nav h4 { top: 10px; left: 147px; font-size: 10px; line-height: 1.2; margin: 0; padding-right: 38px; color: #ddd; }
 .global-nav h4 a { background: url(../img/mobile-npr.png) no-repeat; }
 
 .global-utils { display: none; }
@@ -92,7 +92,7 @@ html { overflow-y: auto; }
 	-webkit-box-sizing: border-box;
 	height: 40px !important;
 	width: 100% !important;
-	padding: 0 10px !important; 
+	padding: 0 5px !important; 
 	vertical-align: bottom;
 	position: static !important;
 	background-image: none;
@@ -107,8 +107,8 @@ html { overflow-y: auto; }
 	        box-shadow: inset 0 -1px 2px rgba(0,0,0,.7);
 }
 #local-wrapper #global-branding input[placeholder] { color: #333 !important; }
-#local-wrapper #global-branding .sw-about-search:active { 
-	color: #999 !important;
+#local-wrapper #global-branding input:focus { 
+	color: #fff !important;
 }
 #global-branding .sitesearch .search-submit {
 	position: absolute;
